# sound-effector

./: .gitignore  LICENSE
docs/: index.rst  make.bat
sound-effector/: Makefile  README.md  pyproject.toml
sound-effector/docs/: Makefile  conf.py
sound-effector/src/: main.py
sound-effector/src/examples/: basic_effects.py  bytes_example.py  mic_input.py  stream_example.py
sound-effector/src/utils/: audio_interface.py
