[tool.poetry]
name = "sound-effector"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.1.0"
PyAudio = "^0.2.11"

[tool.poetry.dev-dependencies]
pysen = "^0.9.1"
isort = "^5.9.3"
black = "20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
[[tool.pysen.lint.mypy_targets]]
paths = ["."]
